# framework

./: CMakeLists.txt
cmake/: CMakeOptions.cmake
dependencies/glad/include/glad/: gl.h
examples/main/: main.c
examples/window/: window.c
headers/private/vowengine/private/: handle.h  log.h  timer.h
headers/private/vowframework/private/: log.h  shader.h  timer.h
headers/public/vowengine/: engine.h  handle.h  log.h  memory.h  timer.h  tuple.h  window.h
headers/public/vowframework/: file.h  framework.h  handle.h  log.h  memory.h  shader.h  timer.h  tuple.h  window.h
include/private/vowengine/: xlog.h
include/public/vowengine/: log.h  memory.h  tuple.h  window.h
include/vowengine/: memory.h  window.h
sources/: engine.c  file.c  framework.c  handle.c  log.c  memory.c  shader.c  timer.c  tuple.c  window.c
src/: log.c  memory.c  window.c
